--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/PasaxeirosVoosOracleMongo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mongo-java-driver-3.4.2.jar=/home/oracle/drivers/mongo-java-driver-3.4.2.jar
+file.reference.ojdbc6.jar=/home/oracle/drivers/ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mongo-java-driver-3.4.2.jar}
+    ${file.reference.mongo-java-driver-3.4.2.jar}:\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
